feat: Implement wallet connection and SBT minting
- Add functionality to connect to an Ethereum wallet (MetaMask).
- Implement the logic to mint the Emotion Card as a Soulbound NFT.
- Fix a bug where search results were displayed in the wrong container.
- Update contract address and ABI in the frontend.
- Update Ethers.js CDN URL.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h2 class="text-lg font-semibold mb-2">Step 1: あなたの感情を揺さぶる10曲を選ぶ</h2>
                     <p class="text-zinc-400 text-sm mb-4">Spotifyからお気に入りの曲を検索して、あなたの「今」を表現する10曲のリストを作成してください。</p>
                     <button id="login-spotify-btn" class="w-full bg-green-500 text-white font-bold py-2 px-4 rounded-lg flex items-center justify-center hover:bg-green-600 transition-colors">
-                        <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm4.594 14.395c-.19.303-.56.404-.864.213-2.53-1.543-5.71-1.886-9.453-1.033-.34.078-.68-.13-.758-.47-.078-.34.13-.68.47-.758 4.032-.91 7.483-.52 10.283 1.18.303.19.404.56.213.864zm.88-2.31c-.23.364-.695.485-1.06.254-2.88-1.76-7.22-2.28-10.45-1.25-.4.12-.82-.1-.94-.5-.12-.4.1-.82.5-.94 3.6-1.14 8.32-.57 11.57 1.4.36.23.48.69.25 1.06zm.13-2.43c-3.44-2.1-9.04-2.3-12.23-1.26-.456.15-.96-.12-1.11-.576-.15-.456.12-.96.576-1.11 3.57-1.14 9.6- .87 13.43 1.4.41.25.56.78.31 1.19-.25.41-.78.56-1.19.31z"/></svg>
+                        <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm4.594 14.395c-.19.303-.56.404-.864.213-2.53-1.543-5.71-1.886-9.453-1.033-.34.078-.68-.13-.758-.47-.078-.34.13-.68.47-.758 4.032-.91 7.483-.52 10.283 1.18.303.19.404.56.213.864zm.88-2.31c-.23.364-.695.485-1.06.254-2.88-1.76-7.22-2.28-10.45-1.25-.4.12-.82-.1-.94-.5-.12-.4.1-.82.5-.94 3.6-1.14 8.32-.57 11.57 1.4.36.23.48.69.25 1.06zm.13-2.43c-3.44-2.1-9.04-2.3-12.23-1.26-.456.15-.96-.12-1.11-.576-.15-.456.12-.96.576-1.11 3.57-1.14 9.6-.87 13.43 1.4.41.25.56.78.31 1.19-.25.41-.78.56-1.19.31z"/></svg>
                         Login with Spotify
                     </button>
                 </div>
@@ -147,7 +147,7 @@
     </div>
 
     <!-- 外部JavaScriptファイルを読み込み -->
-    <script src="https://cdn.ethers.io/5.7.2/ethers.umd.min.js"></script>
+    <script src="https://unpkg.com/ethers@5.7.2/dist/ethers.umd.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
