--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="selection-screen">
             <header class="flex justify-between items-center mb-6">
                 <h1 class="text-2xl font-bold tracking-tighter">Project Anthem</h1>
-                <button class="bg-zinc-800 text-white px-4 py-2 rounded-lg text-sm font-semibold hover:bg-zinc-700 transition-colors">
+                <button id="connect-wallet-btn" class="bg-zinc-800 text-white px-4 py-2 rounded-lg text-sm font-semibold hover:bg-zinc-700 transition-colors">
                     Connect Wallet
                 </button>
             </header>
@@ -77,7 +77,7 @@
                     <svg class="w-5 h-5 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
                     戻る
                 </button>
-                <button class="bg-zinc-800 text-white px-4 py-2 rounded-lg text-sm font-semibold hover:bg-zinc-700 transition-colors">
+                <button id="connect-wallet-btn" class="bg-zinc-800 text-white px-4 py-2 rounded-lg text-sm font-semibold hover:bg-zinc-700 transition-colors">
                     Connect Wallet
                 </button>
             </header>
@@ -136,7 +136,7 @@
                 </div>
 
                 <div class="mt-8 text-center">
-                    <button class="w-full md:w-auto bg-purple-600 text-white font-bold py-3 px-8 rounded-lg hover:bg-purple-700 transition-all text-lg">
+                    <button id="issue-sbt-btn" class="w-full md:w-auto bg-purple-600 text-white font-bold py-3 px-8 rounded-lg hover:bg-purple-700 transition-all text-lg">
                         SBTとして発行する
                     </button>
                      <p class="text-xs text-zinc-500 mt-2">ウォレットを接続して、このカードをあなたの魂に刻みます。</p>
