--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                         <h3 id="card-title" class="text-2xl md:text-3xl font-bold text-white mb-4 text-center"></h3>
                         <div class="flex-grow flex items-center justify-center">
                             <img id="emotion-card-image" src="" alt="Emotion Card Visual" class="w-full h-full object-cover rounded-xl">
+                            <div id="image-fallback-message" class="hidden text-center text-zinc-400 text-sm p-4">
+                                <p>画像生成に失敗しました。</p>
+                                <p>別のEmotion Cardを試してみてください。</p>
+                            </div>
                         </div>
                         <div class="text-right">
                              <p class="text-sm font-bold text-purple-300">Project Anthem</p>
