--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div id="emotion-card" class="bg-zinc-900/80 backdrop-blur-sm w-full h-full rounded-xl p-6 md:p-8 flex flex-col justify-between border border-white/10 shadow-2xl">
                         <!-- Emotion Card本体にはタイトルとビジュアルのみ -->
                         <h3 id="card-title" class="text-2xl md:text-3xl font-bold text-white mb-4 text-center"></h3>
-                        <div class="flex-grow flex items-center justify-center">
+                        <div class="w-full flex items-center justify-center aspect-square">
                             <img id="emotion-card-image" src="" alt="Emotion Card Visual" class="w-full h-full object-cover rounded-xl">
                             <div id="image-fallback-message" class="hidden text-center text-zinc-400 text-sm p-4">
                                 <p>画像生成に失敗しました。</p>
